# cpp-starter

./: CMakeLists.txt  README.md
apps/: app.cpp
src/: CMakeLists.txt
